Started the docs.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>brainf**k with emojis...</h1>
         <h2>Because why not?</h2>
+        <a href='doc/emotif/'>emotif**k docs</a>
     </body>
 </html>
