--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1>brainf**k with emojis...</h1>
         <h2>Because why not?</h2>
-        <a href='doc/emotif/'>emotif**k docs</a>
+        <a href='https://romulus10.gitbook.com/emotif____'>emotif**k docs</a>
     </body>
 </html>
